# project-shanmugar

./: .gitignore  MIGRATION_GUIDE.md  PRD.md  README.md  backward_testing_flow.md  pyproject.toml  requirements-scale.txt  requirements.txt  setup.py
.cursor/rules/: .cursorrules
src/: __init__.py
src/broker_module/upstox/: __init__.py
src/broker_module/upstox/data_api/: CandleData.py  data.ipynb  portfolio.py
src/broker_module/upstox/utils/: ActiveInstrumentsCreator.py  InstrumentKeyFinder.py  UpstoxTokenGenerator.py  symbol_codes.py
src/llm_module/: groqapi.py
src/strategy_module/: __init__.py  core_engine.py  strategy_cli.py
src/strategy_module/strategies/: __init__.py  moving_average_strategy.py  rsi_strategy.py  time_based_strategy.py
src/strategy_module/tests/: test_backward_testing.py  test_forward_testing.py
src/strategy_module/utils/: __init__.py  backtest_data_manager.py  backward_testing.py  brokerage_tax_calculator.py  forward_testing.py  simulators.py  statistical_testing.py  strategy_evaluation_metrics.py  strategy_optimizer.py  strategy_tester.py
upstox_api/: __init__.py  market_data.py  order_management.py
