[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ai-trader"
version = "0.1.0"
description = "Advanced Algorithmic Trading System with MVP to Scale Migration Paths"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    
    # Backtesting & Trading
    "vectorbt>=0.25.0",
    "yfinance>=0.2.0",
    "ccxt>=4.1.0",
    
    # LLM Integration
    "openai>=1.3.0",
    "groq>=0.4.0",
    "langchain>=0.0.350",
    
    # Database & Storage
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "clickhouse-connect>=0.6.0",
    "boto3>=1.34.0",
    
    # Feature Store
    "feast>=0.37.0",
    
    # Task Queue & Event Bus
    "celery>=5.3.0",
    
    # Orchestration
    "apache-airflow>=2.7.0",
    
    # Optimization
    "optuna>=3.4.0",
    
    # Data Quality
    "great-expectations>=0.18.0",
    
    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    
    # Frontend
    "streamlit>=1.28.0",
    
    # CLI & Utilities
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    
    # Security
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    
    # Monitoring & Logging
    "structlog>=23.2.0",
    "loguru>=0.7.0",
    
    # Configuration
    "dynaconf>=3.2.0",
    "hydra-core>=1.3.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "pre-commit>=2.15",
    "isort>=5.12.0",
    "httpx>=0.25.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]
scale = [
    "nautilus-trader>=1.193.0",
    "vllm>=0.2.5",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "faust>=1.10.0",
    "kafka-python>=2.0.0",
    "confluent-kafka>=2.3.0",
    "dagster>=1.5.0",
    "prefect>=2.14.0",
    "ray[tune]>=2.8.0",
    "soda-core>=3.0.0",
    "pandera>=0.18.0",
    "signoz-client>=0.1.0",
    "timescaledb>=2.13.0",
    "ceph-s3>=0.1.0",
    "keydb>=0.1.0",
    "keycloak>=0.27.0",
    "vault>=0.1.0",
    "kubernetes>=28.1.0",
    "helm>=0.1.0",
    "uvloop>=0.19.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/autonomous-ai-trader"
Documentation = "https://github.com/yourusername/autonomous-ai-trader#readme"
Repository = "https://github.com/yourusername/autonomous-ai-trader.git"
"Bug Tracker" = "https://github.com/yourusername/autonomous-ai-trader/issues"
"Migration Guide" = "https://github.com/yourusername/autonomous-ai-trader/blob/main/MIGRATION_GUIDE.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["fastapi", "pydantic", "numpy", "pandas"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]
